构造ws通用工具类

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <url>http://maven.apache.org</url>
     <properties>
         <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
+        <commons-collections4.version>4.0</commons-collections4.version>
         <junit.version>4.7</junit.version>
     </properties>
     <dependencies>
@@ -19,8 +20,12 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
-
-
+        <!-- Apache Commons Collections -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons-collections4.version}</version>
+        </dependency>
         <!-- JUnit -->
         <dependency>
             <groupId>junit</groupId>
